NetworkAgent/Network Webhook/network-hook.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-hook-deployment
  namespace: hypernet-local-agent-system
  labels:
    app: network-hook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: network-hook
  template:
    metadata:
      labels:
        app: network-hook
    spec:
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: node-role.kubernetes.io/master
                  operator: Exists
      containers:
        - name: network-hook
          image: tmaxcloudck/network-hook:0.1.1
          args:
          - -tlsCertFile=/etc/webhook/certs/cert.pem
          - -tlsKeyFile=/etc/webhook/certs/key.pem
          volumeMounts:
          - name: webhook-certs
            mountPath: /etc/webhook/certs
            readOnly: true
      volumes:
      - name: webhook-certs
        secret:
          secretName: network-hook-certs

---
apiVersion: v1
kind: Service
metadata:
  name: network-hook-svc
  namespace: hypernet-local-agent-system
  labels:
    app: network-hook
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    app: network-hook

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: network-hook-webhook-cfg
  labels:
    app: network-hook
webhooks:
- name: network-hook.hypernet-local-agent-system.svc.cluster.local
  clientConfig:
    service:
      name: network-hook-svc
      namespace: hypernet-local-agent-system
      path: "/mutate"
    caBundle: <CA_BUNDLE>
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
